// =============================================
// 模块3：路线与签到模块 ER 图（简化版）
// =============================================

Table route {
  id BIGINT [primary key]
  name VARCHAR(128) [not null]
  creator_id BIGINT [not null]
  difficulty_level TINYINT [not null, default: 1, note: '1休闲 2简单 3中等 4困难 5极限']
  total_distance DECIMAL(6,2) [note: '公里']
  status TINYINT [not null, default: 1, note: '0禁用 1正常']
}

Table route_point {
  id BIGINT [primary key]
  route_id BIGINT [not null]
  point_type TINYINT [not null, default: 1, note: '1途经点 2风险点 3休息点 4补给点']
  name VARCHAR(64) [not null]
  description VARCHAR(256)
  latitude DECIMAL(10,7) [not null]
  longitude DECIMAL(10,7) [not null]
  elevation INT [note: '米']
  sequence INT [not null, default: 0]
  risk_level TINYINT [note: '1低 2中 3高（仅风险点）']
  risk_tip VARCHAR(256)
}

Table checkpoint {
  id BIGINT [primary key]
  route_id BIGINT [not null]
  name VARCHAR(64) [not null]
  description VARCHAR(256)
  latitude DECIMAL(10,7) [not null]
  longitude DECIMAL(10,7) [not null]
  radius INT [not null, default: 100, note: '有效签到半径（米）']
  sequence INT [not null, default: 0, note: '1=集合点，最大=终点']
  checkpoint_type TINYINT [not null, default: 2, note: '1集合点 2途中点 3终点']
  is_required TINYINT [not null, default: 1, note: '0否 1是']
  expected_arrive_minutes INT [note: '预计到达时间（从出发算起，分钟）']
}

Table check_in_record {
  id BIGINT [primary key]
  user_id BIGINT [not null]
  activity_id BIGINT [not null]
  checkpoint_id BIGINT [not null]
  check_in_time DATETIME [not null]
  latitude DECIMAL(10,7) [not null]
  longitude DECIMAL(10,7) [not null]
  distance_to_checkpoint INT [note: '米']
  status TINYINT [not null, default: 1, note: '1正常 2迟到 3补签']
}

Table track_record {
  id BIGINT [primary key]
  user_id BIGINT [not null]
  activity_id BIGINT [not null]
  latitude DECIMAL(10,7) [not null]
  longitude DECIMAL(10,7) [not null]
  elevation INT [note: '米']
  accuracy INT [note: '定位精度（米）']
  speed DECIMAL(5,2) [note: 'km/h']
  record_time DATETIME [not null]
}

Table alert_event {
  id BIGINT [primary key]
  activity_id BIGINT [not null]
  user_id BIGINT [not null]
  alert_type TINYINT [not null, note: '1偏离路线 2严重偏离 3长时间静止 4超时未签到 5失联']
  alert_level TINYINT [not null, default: 1, note: '1警告 2严重']
  latitude DECIMAL(10,7)
  longitude DECIMAL(10,7)
  description VARCHAR(256)
  trigger_time DATETIME [not null]
  handle_status TINYINT [not null, default: 0, note: '0未处理 1处理中 2已处理 3已忽略']
}

Table user {
  id BIGINT [primary key]
  username VARCHAR(32) [unique, not null]
  nickname VARCHAR(32)
  role TINYINT [not null, default: 0, note: '0普通用户 1组织者 2管理员']
  status TINYINT [not null, default: 1, note: '0禁用 1正常']
}

Table activity {
  id BIGINT [primary key]
  title VARCHAR(128) [not null]
  organizer_id BIGINT [not null]
  route_id BIGINT
  activity_date DATE [not null]
  status TINYINT [not null, default: 0, note: '0草稿 1待审核 2已发布 3进行中 4已结束 5已取消 6已驳回']
}

// 关系定义
Ref: route.id > route_point.route_id
Ref: route.id > checkpoint.route_id
Ref: route.creator_id > user.id
Ref: activity.route_id > route.id
Ref: checkpoint.id > check_in_record.checkpoint_id
Ref: user.id > check_in_record.user_id
Ref: activity.id > check_in_record.activity_id
Ref: user.id > track_record.user_id
Ref: activity.id > track_record.activity_id
Ref: activity.id > alert_event.activity_id
Ref: user.id > alert_event.user_id
